# ESP32-Smart-Voice-Trash-Bin

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: hardware.md  voice-protocol.md
main/: CMakeLists.txt  Kconfig.projbuild  config.h  idf_component.yml  main.c
main/comm/: bluetooth_spp.c  bluetooth_spp.h  voice_uart.c  voice_uart.h
main/drivers/: button.c  button.h  hc_sr04.c  hc_sr04.h  pca9685.c  pca9685.h  pcf8574.c  pcf8574.h  ssd1306.c  ssd1306.h
main/services/: bin_manager.c  bin_manager.h  event_bus.c  event_bus.h
main/ui/: display.c  display.h
